# deer-flow

./: .gitignore  README.md  README_EN.md  docker-compose.yml  extensions_config.example.json  test_bandwidth_rag.py
backend/: Dockerfile  pyproject.toml
backend/app/gateway/: app.py
backend/app/gateway/routers/: __init__.py  management.py
backend/tests/: test_loop_detection_middleware.py
docker/: docker-compose-dev.yaml
docker/data-manager/: Dockerfile  pyproject.toml
docker/data-manager/app/: app.py
docker/data-manager/app/routers/: bandwidth.py  emergency.py  everybusiness.py  probe.py
docker/data-manager/app/services/: bandwidth_service.py  emergency_service.py  everybusiness_service.py  probe_service.py
docker/data-manager/app/templates/: index.html
docker/nginx/: nginx.conf
docs/: bandwidth-management-architecture.md  bandwidth.md  batch_ingest_ops_knowledge.py  business-baseline-architecture.md  ops-knowledge-architecture.md  rebuild_bandwidth_vectors.py  remote-probe-architecture.md
docs/01-intro/: 01-what-is-deerflow.md  02-architecture.md  03-quick-start.md  番外篇-deerflow_agent体系.md
docs/businessInfo/: everybusiness
docs/remotion/: 00-主题与规范.md  01-整体架构.md  02-带宽评估.md  03-运维知识库.md  04-远程探测.md  05-业务基线.md  05-组件扩展.md  06-数据管理.md  07-组件扩展.md
docs/superpowers/plans/: 2026-04-08-bandwidth-mcp-skill-architecture.md  2026-04-23-bandwidth-policy-manager.md
docs/superpowers/specs/: 2026-04-06-network-ops-rag-design.md  2026-04-15-data-manager-service-design.md  2026-04-23-bandwidth-policy-manager-design.md
mcp-servers/business-baseline/: config.py  server.py
mcp-servers/business-baseline/db/: database.py  models.py
mcp-servers/business-baseline/tools/: compare_with_baseline.py  get_interpretation.py  parse_daily_report.py  query_baseline.py  query_current_data.py  query_history_trend.py
mcp-servers/common/: reranker.py
mcp-servers/network-ops/: config.py  requirements.txt  server.py
mcp-servers/network-ops/db/: init_tiers.py  mysql_client.py  sqlite_client.py
mcp-servers/ops-knowledge/: config.py  requirements.txt  server.py
mcp-servers/remote-probe/: config.py  requirements.txt  server.py
scripts/: batch_ingest_ops_knowledge.py
(+83 files in other folders)
