[project]
name = "deer-flow"
version = "0.1.0"
description = "LangGraph-based AI agent system with sandbox execution capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.34.0",
    "lark-oapi>=1.4.0",
    "slack-sdk>=3.33.0",
    "python-telegram-bot>=21.0",
    "langgraph-sdk>=0.1.51",
    "markdown-to-mrkdwn>=0.3.1",
    "wecom-aibot-python-sdk>=0.1.6",
    # MCP server runtime dependencies (required for remote-probe, business-baseline etc.)
    "fastmcp>=2.0",
    "paramiko>=3.0",
    "apscheduler>=3.10",
    # MCP server runtime dependencies (required for network-ops)
    "mysql-connector-python>=9.0",
    "langchain-openai>=0.3",
    "langchain-ollama>=0.3",
    "langchain-chroma>=0.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Runtime dependencies for MCP servers (remote-probe, network-ops, ops-knowledge)
# Pre-installed in dev-full Docker image to avoid per-startup installation
mcp-runtime = [
    "fastmcp>=2.0",
    "paramiko>=3.0",
    "apscheduler>=3.10",
]
# ML/embedding stack for reranker and embedding features
ml-embedding = [
    "transformers>=4.45,<5.0",
    "huggingface-hub>=0.20,<1.0",
    "FlagEmbedding>=1.2,<1.3",
    "sentence-transformers>=2.2.2,<4.0",
    "accelerate>=0.20.1",
    "peft>=0.5.0",
    "datasets",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.14.11"]

[tool.uv.workspace]
members = ["packages/harness"]

[tool.uv.sources]
deerflow-harness = { workspace = true }
